syntax = "proto3";

option csharp_namespace = "Makc2025.Dummy.Writer.Infrastructure.Grpc.App";

package Writer;

service App {
    rpc Login (AppLoginActionRequest) returns (AppLoginActionReply);
}

message AppLoginActionRequest {
    string user_name = 1;
    string password = 2;
}

message AppLoginActionReply {
    string user_name = 1;
    string access_token = 2;
}
